# 2350-peripheral-dev

./: .gitignore  .gitmodules  setup.sh
firmware/: .gitignore  CMakeLists.txt
firmware/engine/include/engine/: engine.hpp
firmware/engine/src/: engine.cpp
firmware/hardware/include/hardware/: hardware.hpp  hardware_data.hpp  pin_map.hpp
firmware/hardware/src/: hardware.cpp
firmware/instrument/include/instrument/: instrument.hpp  instrument_data.hpp
firmware/instrument/src/: instrument.cpp
firmware/interface/include/interface/: parameter_data.hpp  parameter_interface.hpp  state_data.hpp  state_interface.hpp
firmware/interface/src/: parameter_interface.cpp  state_interface.cpp
